<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
         
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_theme_change"
            android:entries="@array/pref_themes_entries"
            android:entryValues="@array/pref_themes_values"
            android:key="@string/key_theme_change"
            android:summary="@string/summary_theme_change"
            android:title="@string/title_theme_change" />
 
    </PreferenceCategory>
 
    <PreferenceCategory android:title="@string/pref_title_notifications">

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>
 
    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:key="@string/key_version_name"
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <!--<Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>-->

        <Preference
            android:key="@string/key_help"
            android:summary="@string/summary_help"
            android:title="@string/title_help" />

        <Preference
            android:key="@string/key_disclaimer"
            android:title="@string/title_disclaimer" />

        <Preference
            android:key="@string/key_privacy_policy"
            android:title="@string/title_privacy_policy" />

        <Preference
            android:key="@string/key_terms_of_service"
            android:title="@string/title_terms_of_service" />

        <!--<Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jaeznet.pe.hu/policies/privacypolicy.htm" />
        </Preference>
 
        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>-->
    </PreferenceCategory>
</PreferenceScreen>