<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UpgradeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/subs_buttons">
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:text="@string/upgrade_to_premium" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="	#30cb00"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:text="@string/upgrade_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="	#30cb00"
            android:text="@string/no_ads_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_ads_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="	#30cb00"
            android:text="@string/unl_accounts_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:text="@string/unl_accounts_desc"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#30cb00"
        android:text="@string/track_stocks_title"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:text="@string/track_stocks_desc"/>
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="	#30cb00"
            android:text="&#x2713;  UNLIMITED ALERTS"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:text="Create unlimited price and other alerts"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="	#30cb00"
            android:text="@string/lifetime_access_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:text="@string/lifetime_access_desc"/>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/subs_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_sub_monthly"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="$4.99/ 1 Month"
            android:background="@drawable/button_bg_upgrade"/>
        <Button
            android:id="@+id/btn_sub_yearly"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="$39.99 / YEAR [&#128293; 30% OFF]"
            android:background="@drawable/button_bg_upgrade"/>

        <TextView
            android:id="@+id/btn_restore_purchase"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore_purchase"/>

        <TextView
            android:id="@+id/tv_subscription_policy"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_policy"/>
    </LinearLayout>

</RelativeLayout>